# DingTrader

./: .gitignore  CLAUDE.md  config.yaml.template  pyproject.toml
scripts/: run_backtest.py  run_strategy.py  sync_data.py  verify_strategy.py
src/backtest/: base_strategy.py  commission.py  data_feed.py  optimizer.py  persistence.py  sizer.py
src/config/: settings.py
src/data/: continuous_aggregates.sql  downloader.py  fetcher.py  models.py  sync_manager.py
src/indicators/: base.py  limit_up.py  macd.py  obv.py  registry.py  volume.py
src/notification/: feishu.py
src/strategies/: base_strategy.py  dark_bar_accumulation.py  limit_up_consolidation.py  macd_golden_cross.py  obv_bottom_divergence.py  registry.py
src/tq_bridge/: client.py  market_data.py  sector.py
src/utils/: logging.py  retry.py
