[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dingtrader"
version = "0.1.0"
description = "A-stock quantitative trading system"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "structlog>=23.0",
    "backtrader>=1.9",
    "plotly>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
include = ["*"]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"